# conda-private-feedstock

./: .gitattributes  config.toml
.github/workflows/: build.yaml  pr.yaml
binutils/: meta.yaml
binutils/recipe/: bld.ps1  meta.yaml
brotli/: bld.ps1  meta.yaml  recipe.yaml
brotli/recipe/: meta.yaml
bzip2/: meta.yaml  recipe.yaml
bzip2/recipe/: bld.ps1  meta.yaml  meta.yml
c-ares/: bld.ps1  meta.yaml  recipe.yaml  win.patch
c-ares/recipe/: meta.yaml
cacert/: bld.ps1
cacert/recipe/: meta.yaml
conda-bld/: meta.yaml
conda-bld/recipe/: meta.yaml
conda-build/: meta.yaml
conda-build/recipe/: meta.yaml  vs.patch
cpp-httplib/: bld.ps1  meta.yaml  recipe.yaml
cpp-httplib/recipe/: bld.ps1  meta.yaml
curl/: bld.ps1  cert.patch  meta.yaml  recipe.yaml
curl/recipe/: bld.ps1  cert.patch  meta.yaml
etc/: environment.yml
getopt/: bld.ps1  meta.yaml  recipe.yaml
getopt/recipe/: bld.ps1  meta.yaml  vs.patch
gettext/: bld.ps1  meta.yaml  recipe.yaml
gettext-static/recipe/: bld.ps1  meta.yaml
gettext/recipe/: bld.ps1  meta.yaml
iconv/recipe/: bld.ps1  meta.yaml
icu4c/: bld.ps1  config.patch  recipe.yaml
krb5/: bld.ps1  meta.yaml  recipe.yaml  tweak.patch
krb5/recipe/: bld.ps1  meta.yaml
libarchive/: bld.ps1  meta.yaml  recipe.yaml
libarchive/recipe/: bld.ps1  meta.yaml
libb2/: bld.ps1  meta.yaml  recipe.yaml
libb2/recipe/: bld.ps1  cpuid.patch  meta.yaml
libffi/: bld.ps1  recipe.yaml
libiconv/: bld.ps1  meta.yaml  recipe.yaml  t.patch
libiconv/recipe/: meta.yaml
libintl/recipe/: bld.ps1  meta.yaml
libpng/: bld.ps1  meta.yaml  name.patch  recipe.yaml
libpng/recipe/: meta.yaml
libpsl/: bld.ps1  meta.yaml  recipe.yaml
libpsl/recipe/: icu-win.patch  meta.yaml
libssh/: bld.ps1  meta.yaml  recipe.yaml
libssh/recipe/: bld.ps1  meta.yaml
libunistring/: bld.ps1  meta.yaml  recipe.yaml
libunistring/recipe/: meta.yaml
libxml2/: bld.ps1  meta.yaml  recipe.yaml
libxml2/recipe/: bld.ps1  meta.yaml
llvm-core/: bld.ps1  export.patch  icu.patch  meta.yaml  recipe.yaml
llvm-core/recipe/: bld.ps1  meta.yaml
lz4/: bld.ps1  meta.yaml  recipe.yaml
lz4/recipe/: bld.ps1  meta.yaml
lzo/: bld.ps1  meta.yaml  recipe.yaml
lzo/recipe/: bld.ps1  meta.yaml
m2-aux/: build.ps1  recipe.yaml
m2-aux/recipe/: bld.ps1  meta.yaml
nghttp2/: bld.ps1  recipe.yaml
nghttp3/: meta.yaml  recipe.yaml
nghttp3/recipe/: bld.ps1
ngtcp2/: recipe.yaml
openssl/: bld.ps1  meta.yaml  recipe.yaml  reloc.patch
openssl/recipe/: bld.ps1  lib.patch  meta.yaml
pcre2/: bld.ps1  meta.yaml  recipe.yaml
pkgconf/: meta.yaml  recipe.yaml
pkgconf/recipe/: bld.ps1  meta.yaml
prefix-stub/: bld.ps1  meta.yaml  recipe.yaml
prefix-stub/recipe/: meta.yaml
rattler-bld/: recipe.yaml
rtmpdump/: CMakeLists.txt  bld.ps1  cmake-adpation.patch  recipe.yaml
rtmpdump/recipe/: CMakeLists.txt  bld.ps1  meta.yaml  pkgconfig-adjust.patch  rtmp.def
vc/: conda_build_config.yaml  meta.yaml  recipe.yaml  vc_repack.py  vs_activate.ps1
vc/VsLatest/: VsLatest.psm1
vc/recipe/: activate.bat  conda_build_config.yaml  meta.yaml  vc_repack.py
vc/recipe/VsLatest/: VsLatest.psm1
xz/: bld.ps1  meta.yaml  prefix.patch  recipe.yaml
xz/recipe/: bld.ps1  meta.yaml  prefix.patch
zlib/: archive_name.patch  bld.ps1  meta.yaml  recipe.yaml
zlib-meta/recipe/: meta.yaml
zlib/recipe/: archive_name.patch  bld.bat  bld.ps1  meta.yaml
zstd/: bld.ps1  meta.yaml  recipe.yaml
zstd/recipe/: bld.ps1  meta.yaml
